진행중인 모임 , 이미 신청한 모임 중복신청 시 이미 신청했다고 뜨기, 대기중인 모임은 톡방 못들어가는 기능, 캐시글 실시간 업데이트